studenten.html hat jetzt Eingabemöglichkeiten

--- a/studenten.html
+++ b/studenten.html
@@ -143,18 +143,7 @@
                 .submit-button-container {
                     position: relative;
                     bottom: 0px; /* Adjust value based on container height */
-                        font-size: 18px;
-                        padding: 10px 20px;
-                        background-color: blue;
-                        color: white; /* Textfarbe weiß */
-                        border: none; /* Keine Umrandung */
-                        border-radius: 5px; /* Abgerundete Ecken */
-                        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); /* Schatteneffekt */
-                    }
-
-
-                }
-
+                    height: 40px; /* Example height */
                 }
 </style>
                 </form>
